kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app.kubernetes.io/instance: chatterbot
    app.kubernetes.io/name: chatterbot
    app: chatterbot
  name: chatterbot
  namespace: chatterbot
spec:
  containers:
  - image: chatter:hackathon
    imagePullPolicy: IfNotPresent
    name: chatterbot
    ports:
    - containerPort: 5000
      name: http
      protocol: TCP
    livenessProbe:
      failureThreshold: 3
      initialDelaySeconds: 5
      periodSeconds: 1
      successThreshold: 1
      tcpSocket:
        port: http
      timeoutSeconds: 1
    readinessProbe:
      failureThreshold: 3
      initialDelaySeconds: 3
      periodSeconds: 3
      successThreshold: 1
      tcpSocket:
        port: http
      timeoutSeconds: 1
    resources: {}
#    volumeMounts:
#    - mountPath: /mosquitto/config/mosquitto.conf
#      name: config
#      subPath: mosquitto.conf
#    - mountPath: /mosquitto/data
#      name: data
#    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
#      name: mosquitto-token-z485v
#      readOnly: true
  restartPolicy: Always
