kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatterbot
  namespace: chatterbot
spec:
  selector:
    app: chatterbot
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      name: http
